# PowerTerminal

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
src/PowerTerminal/: PowerTerminal.py
