[build-system]
requires = ["robotframework>=7.0.1", "robotframework-sshlibrary>=3.8.0"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "PowerTerminal"
author = "Abhisit Sangjan"
author-email = "abhisit.sangjan@gmail.com"
home-page = "https://github.com/robotframework-terminal/PowerTerminal"

[tool.black]
line-length = 98
